Given z-index to 9 for all the floated elements to avoid hover effect issue

--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ video {
   background-position: center;
   position: relative;
   overflow: hidden;
-  z-index: 10;
+  z-index: 9;
   transition: all ease 0.6s;
 }
 
@@ -236,7 +236,7 @@ video {
   background-color: #95c11e;
   padding-top: 160px;
   position: relative;
-  z-index: 10;
+  z-index: 9;
   opacity: 0;
   transition: all ease 0.6s; /* making the animation smooth*/
 }
